# phase

./: LICENSE.md  README.md
phase/: Cargo.toml  README.md
phase-bin/: .gitignore  Cargo.toml  README.md
phase-bin/src/: debug.rs  main.rs
phase-bin/src/shaders/: crt.wgsl  display.wgsl
phase/src/: cdrom.rs  cpu.rs  expansion.rs  gte.rs  interrupt.rs  io.rs  lib.rs  mdec.rs  serial.rs  timer.rs
phase/src/audio/: adpcm.rs  mod.rs
phase/src/cdrom/: cue.rs  disc.rs  mod.rs  xaaudio.rs
phase/src/cpu/: cop0.rs  internalmem.rs  mod.rs
phase/src/gpu/: mod.rs  renderer.rs  videostate.rs
phase/src/gpu/renderer/: mod.rs  software.rs
phase/src/gte/: mod.rs  test.rs
phase/src/mem/: bios.rs  cache.rs  control.rs  dma.rs  mod.rs  ram.rs
phase/src/peripheral/: controller.rs  memcard.rs  mod.rs
phase/src/spu/: adpcm.rs  adsr.rs  mod.rs  resampler.rs  reverb.rs  sweep.rs  voice.rs
phase/src/utils/: bcd.rs  bits.rs  interface.rs  mod.rs
