[package]
name = "phase-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
futures = "0.3.5"
wgpu = "26.0"
winit = "0.30"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.phase]
path = "../phase"

[profile.normal]
inherits = "release"
#incremental = true
debug = true