[package]
name = "phase"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10"
crossbeam-channel = "0.5"
regex = "1.12"

[dependencies.mips]
git = "https://github.com/coopersimon/e-mips"
#path = "../../e-mips"

[dependencies.dasp]
version = "0.11"
features = ["interpolate", "interpolate-sinc", "ring_buffer", "signal"]